--- a/crossplane-backstage/3-backstage/templates/s3-bucket-template/template.yaml
+++ b/crossplane-backstage/3-backstage/templates/s3-bucket-template/template.yaml
@@ -130,7 +130,7 @@ spec:
         description: 'S3 Bucket: ${{ parameters.bucketName }} - Created by Backstage'
         repoUrl: github.com?owner=${{ parameters.owner | replace("group:", "") | replace("user:", "") }}&repo=infra-s3-${{ parameters.bucketName }}
         defaultBranch: main
-        repoVisibility: private
+        repoVisibility: public
         # Push rendered content to the new repo
         sourcePath: .
     
