--- a/crossplane-backstage/3-backstage/templates/s3-bucket-template/template.yaml
+++ b/crossplane-backstage/3-backstage/templates/s3-bucket-template/template.yaml
@@ -127,7 +127,7 @@ spec:
       action: publish:github
       input:
         description: 'S3 Bucket: ${{ parameters.bucketName }} - Created by Backstage'
-        repoUrl: github.com?owner=${{ parameters.owner | replace("group:", "") | replace("user:", "") }}&repo=infra-s3-${{ parameters.bucketName }}
+        repoUrl: github.com?owner=betterguy2004&repo=infra-s3-${{ parameters.bucketName }}
         defaultBranch: main
         repoVisibility: public
         # Push rendered content to the new repo
@@ -140,7 +140,7 @@ spec:
       name: Trigger GitHub Actions Workflow
       action: github:actions:dispatch
       input:
-        repoUrl: github.com?owner=${{ parameters.owner | replace("group:", "") | replace("user:", "") }}&repo=infra-s3-${{ parameters.bucketName }}
+        repoUrl: github.com?owner=betterguy2004&repo=infra-s3-${{ parameters.bucketName }}
         workflowId: deploy-infrastructure.yaml
         branchOrTagName: main
         workflowInputs:
