fix: add default description values to prevent empty field validation errors

--- a/crossplane-backstage/3-backstage/templates/rds-template/skeleton/catalog-info.yaml
+++ b/crossplane-backstage/3-backstage/templates/rds-template/skeleton/catalog-info.yaml
@@ -3,7 +3,7 @@ kind: Component
 metadata:
   name: rds-${{ values.databaseName }}
   title: RDS Database - ${{ values.databaseName }}
-  description: ${{ values.description }}
+  description: ${{ values.description or "RDS database managed by Crossplane" }}
   annotations:
     backstage.io/kubernetes-id: rds-${{ values.databaseName }}
     backstage.io/kubernetes-namespace: default
