--- a/crossplane-backstage/3-backstage/templates/s3-bucket-template/skeleton/.github/workflows/deploy-infrastructure.yaml
+++ b/crossplane-backstage/3-backstage/templates/s3-bucket-template/skeleton/.github/workflows/deploy-infrastructure.yaml
@@ -61,7 +61,8 @@ jobs:
           argocd login ${{ env.ARGOCD_SERVER }} \
             --auth-token ${{ env.ARGOCD_AUTH_TOKEN }} \
             --insecure \
-            --grpc-web
+            --grpc-web \
+            --plaintext
       
       # ------------------------------------------
       # Register this repository with ArgoCD
