--- a/crossplane-backstage/3-backstage/templates/s3-bucket-template/template.yaml
+++ b/crossplane-backstage/3-backstage/templates/s3-bucket-template/template.yaml
@@ -107,6 +107,9 @@ spec:
       action: fetch:template
       input:
         url: ./skeleton
+        # Preserve GitHub Actions syntax - don't render workflow files
+        copyWithoutRender:
+          - .github/workflows/**
         values:
           bucketName: ${{ parameters.bucketName }}
           environment: ${{ parameters.environment }}
