--- a/crossplane-backstage/3-backstage/templates/rds-template/template.yaml
+++ b/crossplane-backstage/3-backstage/templates/rds-template/template.yaml
@@ -122,6 +122,9 @@ spec:
       action: fetch:template
       input:
         url: ./skeleton
+        # Preserve GitHub Actions syntax - don't render workflow files
+        copyWithoutRender:
+          - .github/workflows/**
         values:
           databaseName: ${{ parameters.databaseName }}
           environment: ${{ parameters.environment }}
