some small changes

--- a/crossplane-backstage/3-backstage/templates/s3-bucket-template/skeleton/.github/workflows/deploy-infrastructure.yaml
+++ b/crossplane-backstage/3-backstage/templates/s3-bucket-template/skeleton/.github/workflows/deploy-infrastructure.yaml
@@ -61,8 +61,7 @@ jobs:
         run: |
           argocd login "$ARGOCD_SERVER" \
             --auth-token "$ARGOCD_AUTH_TOKEN" \
-            --plaintext \
-            --grpc-web
+            --plaintext 
       
       # ------------------------------------------
       # Register this repository with ArgoCD
