Fix: Recreate skeleton YAML file and update sourcePath

--- a/crossplane-backstage/3-backstage/templates/s3-bucket-template/template.yaml
+++ b/crossplane-backstage/3-backstage/templates/s3-bucket-template/template.yaml
@@ -149,7 +149,7 @@ spec:
           
           Created by Backstage template at ${{ "" | now }}
         targetPath: environments/${{ parameters.environment }}/storage
-        sourcePath: manifests
+        sourcePath: .
     
 
 
