some small change in logic s3

--- a/crossplane-backstage/3-backstage/templates/s3-bucket-template/skeleton/s3-${{ values.bucketName }}.yaml
+++ b/crossplane-backstage/3-backstage/templates/s3-bucket-template/skeleton/s3-${{ values.bucketName }}.yaml
@@ -29,5 +29,5 @@ spec:
     CreatedBy: backstage
     Owner: ${{ values.owner }}
   # Crossplane machinery
-  crossplane:
-      name: s3bucket-composition
+  compositionRef:
+    name: s3bucket-composition
